@@ -1,8 +1,11 @@
 apport (0.25) UNRELEASED; urgency=low
 
   * Drop apport-gtk's update-notifier dependency to a Recommends:.
+  * apport_utils.py, report_add_gdb_info(): Add register dump and disassembly
+    of the last 32 bytes, they might be useful to see what's going on
+    sometimes. Thanks to Kees Cook for the idea and the patch.
 
- -- Martin Pitt <martin.pitt@ubuntu.com>  Mon,  2 Oct 2006 10:31:50 +0200
+ -- Martin Pitt <martin.pitt@ubuntu.com>  Mon,  2 Oct 2006 13:12:53 +0200
 
 apport (0.24) edgy; urgency=low
 
